<resources>
    <string name="date_format">dd.MM.yyyy</string>
    <string name="time_format">HH:mm:ss</string>
    <string name="app_name">NotebookApplication</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_login">Zaloguj</string>
    <string name="login_hint_password">Hasło</string>
    <string name="login_hint_login">Login</string>
    <string name="login_info">Proszę podać login i hasło, aby kontynuować.</string>
    <string name="login_validation_pass_empty">Proszę podać hasło.</string>
    <string name="login_validation_login_empty">Proszę podać login.</string>
    <string name="login_success">Logowanie powiodło się.</string>
    <string name="login_failure">Logowanie nie powiodło się. Prosimy spróbować ponownie.</string>
    <string name="logged_in__logout">Wyloguj</string>
    <string name="list_detail_name">Nazwa listy:</string>
    <string name="list_detail_create_date">Data utworzenia:</string>
    <string name="list_detail_edit_date">Date edycji:</string>
    <string name="list_detail_jobs_list">Lista zadań:</string>
    <string name="job_detail_title">Tytuł</string>
    <string name="job_detail_create_date">Data utworzenia:</string>
    <string name="job_detail_edit_date">Data ostatniej edycji:</string>
    <string name="job_detail_content">Treść zadania</string>
    <string name="job_detail_is_finished">Zakończone</string>
    <string name="register">Zarejestruj</string>
    <string name="back_to_login">Zaloguj się</string>
    <string name="confirm_register">Zarejestruj</string>
    <string name="register_username">Nazwa użytkownika:</string>
    <string name="register_surname">Nazwisko:</string>
    <string name="register_name">Imię:</string>
    <string name="register_email">Adres e-mail:</string>
    <string name="register_password">Hasło:</string>
    <string name="register_confirm_password">Potwierdź hasło:</string>
    <string name="register_failure">Rejestracja zakończone niepowodzeniem</string>
    <string name="register_success">Rejestracja zakończona powodzeniem.</string>
    <string name="register_wrong_username">Błędna nazwa użytkownika</string>
    <string name="register_wrong_name">Błędne imię</string>
    <string name="register_wrong_surname">Błędne nazwisko</string>
    <string name="register_wrong_password">Błędne hasło - hasła muszą być takie same</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_name_new_list">Podaj nazwę listy</string>
    <string name="add_new_list">Dodaj</string>
    <string name="empty_field">---</string>

</resources>