<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">
            <TextView
                android:id="@+id/tv_register_username"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_username" />
            <EditText
                android:layout_row="0"
                android:layout_column="1"
                android:id="@+id/et_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_row="1"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_name" />
            <EditText
                android:id="@+id/et_register_name"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_row="2"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_surname" />
            <EditText
                android:id="@+id/et_register_last_name"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_row="3"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_email" />
            <EditText
                android:layout_row="3"
                android:layout_column="1"
                android:id="@+id/et_register_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_row="4"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_password" />
            <EditText
                android:id="@+id/et_register_password"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
            <TextView
                android:layout_row="5"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_confirm_password" />
            <EditText
                android:id="@+id/et_register_confirm_password"
                android:layout_row="5"
                android:layout_column="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/b_register_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_register" />

        <Button
            android:id="@+id/b_register_back_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login" />
    </LinearLayout>
</FrameLayout>