<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListDetailFragment">
    <LinearLayout
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="@dimen/list_item_small"
            android:textColor="@color/inactive"
            android:text="@string/list_detail_name"/>
        <TextView
            android:id="@+id/list_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/list_item_normal"
            android:textColor="@color/active"
            android:text="Name"/>

        <GridLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="@dimen/list_item_small"
                android:textColor="@color/inactive"
                android:text="@string/list_detail_create_date"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/list_item_small"
                android:textColor="@color/inactive"
                android:text="@string/list_detail_edit_date"/>
        </GridLayout>
        <GridLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/list_created_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="@dimen/list_item_normal"
                android:textColor="@color/active"
                android:text="Created date"/>
            <TextView
                android:id="@+id/list_edited_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/list_item_normal"
                android:textColor="@color/active"
                android:text="Edited Date"/>
        </GridLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/list_item_small"
            android:textColor="@color/inactive"
            android:text="@string/list_detail_jobs_list"/>
            <fragment
                android:name="com.example.android.notebookapplication.JobFragment"
                android:id="@+id/jobs_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </LinearLayout>

</FrameLayout>