<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JobDetailFragment">
    <LinearLayout
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:textSize="@dimen/list_item_small"
                android:textColor="@color/inactive"
                android:text="@string/job_detail_title"/>
            <TextView
                android:id="@+id/job_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/list_item_normal"
                android:textColor="@color/active"
                android:text="Name"/>
        </FrameLayout>

        <Switch
            android:id="@+id/job_is_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_detail_is_finished"
            android:textColor="@color/active"
            android:padding="5dp"/>
        <GridLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="@dimen/list_item_small"
                android:textColor="@color/inactive"
                android:text="@string/job_detail_create_date"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/list_item_small"
                android:textColor="@color/inactive"
                android:text="@string/job_detail_edit_date"/>
        </GridLayout>
        <GridLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/job_created_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="@dimen/list_item_normal"
                android:textColor="@color/active"
                android:text="Created date"/>
            <TextView
                android:id="@+id/job_edited_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/list_item_normal"
                android:textColor="@color/active"
                android:text="Edited Date"/>
        </GridLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/list_item_small"
            android:textColor="@color/inactive"
            android:text="@string/job_detail_content"/>
        <TextView
            android:id="@+id/job_detail_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textSize="@dimen/list_item_normal"
            android:textColor="@color/active"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_gravity="right|bottom">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_job"
            android:src="@drawable/ic_edit"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/ic_delete"
            android:id="@+id/delete_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/edit_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:visibility="gone">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_confirm_edit"
                android:src="@drawable/ic_confirm"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:src="@drawable/ic_cancel"
                android:id="@+id/button_cancel_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>